--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body style="background-image: linear-gradient(to right top, #141518, #2a3647, #375c7c, #3686b3, #12b3eb); height: 100vh;">
   <app-root></app-root>
 </body>
 </html>
