--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="background-image: linear-gradient(to right top, #141518, #2a3647, #375c7c, #3686b3, #12b3eb); height: 100vh;">
+<body>
   <app-root></app-root>
 </body>
 </html>
